@startuml
skinparam classAttributeIconSize 0

class ShipTripUI{
}

class ShipOccupancyController {
+ tripsBelowThreshHold(int mmsi)
}

class ConnectionFactory {
+ getInstance()
+ getDatabaseConnection()
}

class CargoManifestStore {
+ getTripsThreshHold(DatabaseConnection databaseConnection, int mmsi, String startDate )
}

class DatabaseConnection {
+ getConnection()
}

ShipOccupancyController <.up. ShipTripUI
ShipOccupancyController "1" --> "1..*" ConnectionFactory : uses
ShipOccupancyController "1" --> "1" CargoManifestStore : uses
CargoManifestStore "1" --> "1..*" DatabaseConnection : uses



@enduml